Upload  document  desgn   n progress

--- a/src/ui/internal-audit/src/app/views/private/upload-document/upload-document/upload-document.component.html
+++ b/src/ui/internal-audit/src/app/views/private/upload-document/upload-document/upload-document.component.html
@@ -6,78 +6,170 @@
             </c-card-header>
             <c-card-body>
                 <form [formGroup]="uploadDocumentForm">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-floating mb-3 mt-4">
-                                <input type="text" class="form-control" formControlName="documentName" id="documentName"
-                                    placeholder="Document Name">
-                                <label for="documentName">Document Name</label>
-                            </div>
-                            <div class="form-floating mb-3 mt-4">
-                                <input type="text" class="form-control" formControlName="documentVersion"
-                                    id="documentVersion" placeholder="Document Version">
-                                <label for="documentVersion">Document Version</label>
-                            </div>
-                            <div class="form-floating mb-3 mt-4">
+                    <c-row [gutter]="{g: 2}">
+                        <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="documentName" name="documentName" id="documentName"
+                                  placeholder="Name">
+                                <label cLabel for="empName">Document Name</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('documentName')?.invalid &&
+                              uploadDocumentForm.get('documentName')?.errors &&
+                                    (uploadDocumentForm.get('documentName')?.dirty || uploadDocumentForm.get('documentName')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('documentName').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
 
-                                <c-multi-select multiple formControlName="multiSelect" name="multiSelect" multiple>
-                                    <c-multi-select-option>Bangladesh</c-multi-select-option>
-                                    <c-multi-select-option>India</c-multi-select-option>
-                                    <c-multi-select-option>Pakistan</c-multi-select-option>
-                                    <c-multi-select-option>Japan</c-multi-select-option>
-                                    <c-multi-select-option>Philipine</c-multi-select-option>
-                                </c-multi-select>
 
-                                <!-- 
-                            <c-multi-select formControlName="multiSelect" multiple>
-                                <c-multi-select-option>Angular</c-multi-select-option>
-                                <c-multi-select-option>Bootstrap</c-multi-select-option>
-                                <c-multi-select-option>React.js</c-multi-select-option>
-                                <c-multi-select-option>Vue.js</c-multi-select-option>
-                            </c-multi-select> -->
 
+                        <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="documentVersion" name="documentVersion" id="documentVersion"
+                                  placeholder="Name">
+                                <label cLabel for="documentVersion">Document Version</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('documentVersion')?.invalid &&
+                              uploadDocumentForm.get('documentVersion')?.errors &&
+                                    (uploadDocumentForm.get('documentVersion')?.dirty || uploadDocumentForm.get('documentVersion')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('documentVersion').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+
+                    </c-row>
+                    <br>
+                    <c-row [gutter]="{g: 2}">
+                        
+
+                        <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="approvedBy" name="approvedBy" id="approvedBy"
+                                  placeholder="Name">
+                                <label cLabel for="approvedBy">Approved By</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('approvedBy')?.invalid &&
+                              uploadDocumentForm.get('approvedBy')?.errors &&
+                                    (uploadDocumentForm.get('approvedBy')?.dirty || uploadDocumentForm.get('approvedBy')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('approvedBy').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+
+
+                        <!-- <c-col md>
+                            <c-multi-select multiple formControlName="roleList" name="roleList" required>
+                              <c-multi-select-option *ngFor="let role of roles" [value]="role.id" [selected]="isSelected(role.id)" >{{role.name}}
+                              </c-multi-select-option>
+                            </c-multi-select>
+                            <div cRow *ngIf="uploadDocumentForm.get('roleList')?.invalid &&
+                            uploadDocumentForm.get('roleList')?.errors &&
+                                  (uploadDocumentForm.get('roleList')?.dirty || uploadDocumentForm.get('roleList')?.touched)">
+                              <small class="text-danger" *ngIf="uploadDocumentForm.get('roleList').hasError('required')">
+                                This field is required.
+                              </small>
                             </div>
-                            <div class="form-floating mb-3 mt-4">
-                                <input type="text" class="form-control" formControlName="description" id="description"
-                                    placeholder="Description">
-                                <label for="description">Description</label>
+                          </c-col> -->
+
+                          <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="description" name="description" id="description"
+                                  placeholder="Name">
+                                <label cLabel for="description">Document Descrption</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('description')?.invalid &&
+                              uploadDocumentForm.get('description')?.errors &&
+                                    (uploadDocumentForm.get('description')?.dirty || uploadDocumentForm.get('description')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('description').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+                    </c-row>
+                    <br>
+
+                    <c-row [gutter]="{g: 2}">
+                        <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="activeFrom" name="activeFrom" id="activeFrom"
+                                  placeholder="activeFrom" type="date">
+                                <label cLabel for="empName">Active From</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('activeFrom')?.invalid &&
+                              uploadDocumentForm.get('activeFrom')?.errors &&
+                                    (uploadDocumentForm.get('activeFrom')?.dirty || uploadDocumentForm.get('activeFrom')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('activeFrom').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+
+
+
+                        <c-col md>
+                            <div cFormFloating>
+                                <input type="text" class="form-control" formControlName="activeTo" name="activeTo" id="activeTo"
+                                  placeholder="activeTo" type="date">
+                                <label cLabel for="activeTo">Active To</label>
+                              </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('activeTo')?.invalid &&
+                              uploadDocumentForm.get('activeTo')?.errors &&
+                                    (uploadDocumentForm.get('activeTo')?.dirty || uploadDocumentForm.get('activeTo')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('activeTo').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+
+                    </c-row>
+
+                    <br>
+
+                    <c-row [gutter]="{g: 2}">
+                         <c-col md>
+                            <c-multi-select multiple formControlName="roleList" name="roleList" required>
+                              <c-multi-select-option *ngFor="let role of roles" [value]="role.id" [selected]="isSelected(role.id)" >{{role.name}}
+                              </c-multi-select-option>
+                            </c-multi-select>
+                            <div cRow *ngIf="uploadDocumentForm.get('roleList')?.invalid &&
+                            uploadDocumentForm.get('roleList')?.errors &&
+                                  (uploadDocumentForm.get('roleList')?.dirty || uploadDocumentForm.get('roleList')?.touched)">
+                              <small class="text-danger" *ngIf="uploadDocumentForm.get('roleList').hasError('required')">
+                                This field is required.
+                              </small>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-floating mt-4">
-                                <input type="text" class="form-control" formControlName="approvedBy" id="approvedBy"
-                                    placeholder="Approved By">
-                                <label for="approvedBy">Approved By</label>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3 mt-4">
-                                        <input class="form-control" placeholder="activeFrom"
-                                            formControlName="activeFrom" id="activeFrom" type="date">
-                                        <label for="activeForm">Active From</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating mb-3 mt-4">
-                                        <input class="form-control" placeholder="activeTo" formControlName="activeTo"
-                                            id="activeForm" type="date">
-                                        <label for="activeTo">Active To</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-floating mt-2">
-                                <input type="text" class="form-control" formControlName="uploadeddBy" id="uploadedBy"
-                                    placeholder="Uploaded By">
-                                <label for="approvedBy">Uploaded By</label>
-                            </div>
-                            <br>
+                          </c-col>
+
+
+
+                        <c-col md>
                             <div>
-                                <input type="file" class="form-control" formControlName="documentId" id="documentId" placeholder="documentId">
+                                <input type="file" class="form-control" formControlName="documentId" id="documentId"
+                                    placeholder="documentId">
                                 <br>
                             </div>
-                            
-                        </div>
-                    </div>
+                              <div cRow *ngIf="uploadDocumentForm.get('documentId')?.invalid &&
+                              uploadDocumentForm.get('documentId')?.errors &&
+                                    (uploadDocumentForm.get('documentId')?.dirty || uploadDocumentForm.get('documentId')?.touched)">
+                                  <small class="text-danger" *ngIf="uploadDocumentForm.get('documentId').hasError('required')">
+                                      This field is required.
+                                  </small>
+                                
+                              </div>
+                        </c-col>
+
+                    </c-row>
+
+                   
                     <button cButton class="btn btn-primary btnSaveColor mt-4 me-1">Save</button>
                     <button cButton class="btn btn-primary btnSaveColor mt-4 me-1">Cancel</button>
                 </form>
@@ -86,7 +178,8 @@
     </div>
 
     <div class="row overflow-auto">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-bordered row-border datatableStyle hover" id="mytable">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+            class="table table-bordered row-border datatableStyle hover" id="mytable">
             <thead>
                 <tr>
                     <th>Document Name</th>
@@ -101,7 +194,7 @@
                 </tr>
             </thead>
             <tbody *ngIf="riskAssesmentOverdue?.length != 0">
-                
+
                 <tr *ngFor="let riskAssessment of riskAssesmentOverdue; let i = index" ng-click="rowClickHandler">
                     <td> {{i + 1}} </td>
                     <td>{{ riskAssessment.branchName }}</td>
@@ -113,14 +206,14 @@
                     <td> {{ riskAssessment.score }} </td>
                     <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
-                          <button type="button" class="btn btn-secondary btnEditColor">
-                            <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
-                          </button>
-                          <button type="button" class="btn btn-danger btnDeleteColor">
-                            <svg cIcon name="cilUserX" size="md" title="Delete Button Icon"></svg>
-                          </button>
+                            <button type="button" class="btn btn-secondary btnEditColor">
+                                <svg cIcon name="cilPencil" size="md" title="Edit Button icon"></svg>
+                            </button>
+                            <button type="button" class="btn btn-danger btnDeleteColor">
+                                <svg cIcon name="cilUserX" size="md" title="Delete Button Icon"></svg>
+                            </button>
                         </div>
-                      </td>
+                    </td>
                 </tr>
             </tbody>
             <tbody *ngIf="riskAssesmentOverdue?.length == 0">
