--- a/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
+++ b/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
@@ -79,7 +79,7 @@
                         </c-card-header>
                         <c-card-body> 
                           <div class="row overflow-auto">
-                            <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                            <table datatable [dtOptions]="dtOptions[0]" class="table table-bordered row-border hover" >
                               <thead>
                                 <tr>
                                   <th>Document Name</th>
@@ -88,16 +88,15 @@
                                   <th>Active Till</th>
                                 </tr>
                               </thead>
-                              <tbody *ngIf="countries?.length != 0">
-                                <tr *ngFor="let country of countries">
-                                  <td>{{ country.name }}</td>
-                                  <td>{{ country.code }}</td>
-                                  <td>{{ country.remarks }}</td>
-                                  <td>{{ country.createdOn | date:'mediumDate' }}</td>
-                                  
+                              <tbody *ngIf="documents?.length != 0">
+                                <tr *ngFor="let document of documents">
+                                  <td (click)="fileDownLoad(document.documentId)" style="color:blue;cursor: pointer;"><svg cIcon name="cilCopy" size="xl"></svg>&nbsp; {{ document.document.name }}</td>
+                                  <td>{{ document.documentVersion }}</td>
+                                  <td>{{ document.approvedBy }}</td>
+                                  <td>{{ document.activeTo | date:'mediumDate' }}</td>
                                 </tr>
                               </tbody>
-                              <tbody *ngIf="countries?.length == 0">
+                              <tbody *ngIf="documents?.length == 0">
                                 <tr>
                                   <td colspan="5" class="no-data-available">No data!</td>
                                 </tr>
@@ -110,7 +109,8 @@
                 </c-col>
               </c-row>
               <c-row>
-                <c-col md>
+
+                <!-- <c-col md>
                     <c-card class="mb-4" style="margin-left: 2%;">
                         <c-card-header class="Header_Title">
                             <c-icon name="cilShareBoxed"></c-icon> <strong><span> My Audit </span></strong>
@@ -123,7 +123,7 @@
                                 <option value="3">Branch Audit</option>
                             </select>
                             <div class="row overflow-auto">
-                              <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                              <table datatable [dtOptions]="dtOptions[1]" class="table table-bordered row-border hover" >
                                 <thead>
                                   <tr>
                                     <th>Audit ID</th>
@@ -149,8 +149,10 @@
                           </div>
                         </c-card-body>
                     </c-card>
-                </c-col>
-                <c-col md>
+                </c-col> -->
+
+
+                <!-- <c-col md>
                     <c-card class="mb-4"  style="margin-left: 1%; margin-right: 1%;">
                         <c-card-header class="Header_Title">
                             <c-icon name="cilSettings"></c-icon> <strong><span> Action To Be Taken </span></strong>
@@ -175,7 +177,7 @@
                                 </c-col>
                             </c-row>
                             <div class="row overflow-auto">
-                              <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                              <table datatable [dtOptions]="dtOptions[2]" class="table table-bordered row-border hover" >
                                 <thead>
                                   <tr>
                                     <th>Issue ID</th>
@@ -204,6 +206,7 @@
                         </c-card-body>
                     </c-card>
                 </c-col>
+
                 <c-col md>
                     <c-card class="mb-4"  style="margin-right: 2%;">
                         <c-card-header class="Header_Title">
@@ -230,7 +233,7 @@
                                 </c-col>
                             </c-row>
                             <div class="row overflow-auto">
-                              <table datatable [dtOptions]="dtOptions" class="table table-bordered row-border hover" >
+                              <table datatable [dtOptions]="dtOptions[3]" class="table table-bordered row-border hover" >
                                 <thead>
                                   <tr>
                                     <th>Issue ID</th>
@@ -256,7 +259,9 @@
                           </div>
                         </c-card-body>
                     </c-card>
-                </c-col>
+                </c-col> -->
+
+
               </c-row>
             </c-card-body>
         </c-col>
