--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-view/audit-view.component.html
@@ -10,7 +10,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <button  class="btnCreateColor"  cButton (click)="RedirectToAuditList()">
-                   Branch Audit List
+                    &#8592; Branch Audit List
                   </button> 
                 </div>
                 <div class="col-md-6">
