--- a/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-configuration/schedule-configuration.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/schedule-configuration/schedule-configuration.component.html
@@ -19,14 +19,15 @@
               <div class="card-body">
                 <div class="row">
                     <div class="col-md-6"> 
+                      <button class="btnCreateColor"  cButton>&#8592; Schedule View </button> 
                     </div>
                     <div class="col-md-6">
                         <div class="a row">
                             <div class="col-md-6">
-                                <button  class="btnUpdateColor"  cButton > Update </button> 
+                                <button [cModalToggle]="verticallyCenteredModal.id" class="btnUpdateColor"  cButton (click)="edit()" > Update </button> 
                             </div>
                             <div class="col-md-6">
-                                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor"  cButton (click)="LoadRiskOwner()"> Add </button> 
+                                <button [cModalToggle]="verticallyCenteredModal.id" class="btnCreateColor"  cButton (click)="reset()"> Add </button> 
                             </div>
                         </div>
                     </div>
@@ -76,41 +77,75 @@
           <c-modal-body>
             <div class="col-lg-12" >
               <input type="hidden" formControlName="id"/>
-                <div *ngFor="let branch of branches let i=index" cFormFloating>
-                    <div class="form-floating">
-                        <div class="row">
-                            <div class="col-md-6 form-floating">
-                                <input type="hidden" formControlName="branchId" [value]="branch.id"/>
-                                <input type="text" class="form-control" formControlName="branchId" [value]="branch.branchName">
-                                <label for="floatingInput">Branch Name</label>
-                            </div>
-                            <div class="col-md-6">
-                                <c-col xs="12">
-                                    <c-card class="mb-4">
-                                      <c-card-header>
-                                        <strong>Risk Owner</strong>
-                                      </c-card-header>
-                                      <c-card-body>
-                                        <c-row [gutter]="{g: 2}">
-                                          <c-col md>
-                                            <c-multi-select multiple formControlName="riskOwnerList" name="riskOwnerList" required>
-                                              <c-multi-select-option *ngFor="let user of users" [value]="user.id" >{{user.userName}}
-                                              </c-multi-select-option>
-                                            </c-multi-select>
-                                          </c-col>
-                                        </c-row>
-                                      </c-card-body>
-                                    </c-card>
-                                  </c-col>
-                            </div>
-                        </div>
 
-                    </div>
-
-                  
-
-                </div>
+              <!-- <div formArrayName="riskOwners">
                 
+                <div *ngFor="let riskOwner of scheduleConfigForm.get('riskOwners')['controls'] " cFormFloating>
+                  <div class="row" [formGroup]="actionOwner">
+                    <div class="col-md-6 form-floating">
+                      
+                        <input type="hidden" formControlName="branchId" />
+                        <input type="text" class="form-control" formControlName="branchName" >
+                        <label for="floatingInput">Branch Name</label>
+                    </div>
+                    <div class="col-md-6">
+                        <c-col xs="12">
+                            <c-card class="mb-4">
+                              <c-card-header>
+                                <strong>Risk Owner</strong>
+                              </c-card-header>
+                              <c-card-body>
+                                <c-row [gutter]="{g: 2}">
+                                  <c-col md>
+                                    <c-multi-select multiple formControlName="riskOwnerId" name="riskOwnerId" required>
+                                      <c-multi-select-option *ngFor="let user of users" [value]="user.id" >{{user.userName}}
+                                      </c-multi-select-option>
+                                    </c-multi-select>
+                                  </c-col>
+                                </c-row>
+                              </c-card-body>
+                            </c-card>
+                          </c-col>
+                      </div>
+                    </div>
+                </div>
+              </div> -->
+                
+                  <!-- <div cFormFloating>
+                <select aria-label="Floating label select example" cSelect id="branchId" formControlName="branchId" name="branchId">
+                  <option value=null>Select Branch</option>
+                  <option *ngFor="let branch of branches" [value]="branch.id">
+                    {{branch.branchName}}
+                  </option>
+                </select>
+                <label for="branchId" class="dropdownLabel">Branch</label>
+              </div>
+              <div cRow *ngIf="(scheduleConfigForm.get('branchId')?.invalid && scheduleConfigForm.get('branchId')?.errors) &&         
+                (scheduleConfigForm.get('branchId')?.dirty || scheduleConfigForm.get('branchId')?.touched)">
+                <small class="text-danger">
+                  This field is required.
+                </small>                                 
+              </div> 
+              <br>
+              <div class="col-md-12">
+                  <c-col xs="12">
+                      <c-card class="mb-4">
+                        <c-card-header>
+                          <strong>Risk Owner</strong>
+                        </c-card-header>
+                        <c-card-body>
+                          <c-row [gutter]="{g: 2}">
+                            <c-col md>
+                              <c-multi-select multiple formControlName="riskOwnerList" name="riskOwnerList" required>
+                                <c-multi-select-option *ngFor="let user of users" [value]="user.id" >{{user.userName}}
+                                </c-multi-select-option>
+                              </c-multi-select>
+                            </c-col>
+                          </c-row>
+                        </c-card-body>
+                      </c-card>
+                    </c-col>
+              </div> -->
               
                      
             </div>
