--- a/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/userlist/userlist.component.html
@@ -68,7 +68,7 @@
                       <td>{{ user.isEnabled ? 'Yes':'No'}}</td>
                       <td>{{ user.isAccountLocked ? 'Yes':'No' }}</td>
                       <td>{{ user.isAccountExpired ? 'Yes':'No'}}</td>
-                      <td>{{ user.isPasswordExpired ? 'Yes':'No'}}</td>
+                      <!-- <td>{{ user.isPasswordExpired ? 'Yes':'No'}}</td> -->
                       <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
                           <button type="button" class="btn btn-secondary btnEditColor" [routerLink]="['/security/userRegistration',user.id]">
