--- a/src/ui/internal-audit/src/app/views/private/security/profile-update/profile-update.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/profile-update/profile-update.component.html
@@ -4,10 +4,17 @@
   <c-card-header>Upload Your Photo</c-card-header>
   <c-card-body>
     <form [formGroup]="profileUpdateForm" (submit)="submit()">
-        <div (click)="clickFileControl('profileImage')" class="w-50 m-auto profile-image-div">
+      <div style="width:max-content" class="m-auto">
+        <div (click)="clickFileControl('profileImage')" class="profile-image-div">
           <img *ngIf="imageUrl == ''" src="assets/img/avatars/1.jpg" class="profile-image">
           <img *ngIf="imageUrl != ''" src="{{imageUrl}}" class="profile-image">
         </div>
+
+      </div>
+      <c-row style="width:max-content" class="m-auto mt-2">
+        <c-badge color="info-gradient" size="xl"  shape="rounded-pill">{{designation}}</c-badge>
+      </c-row>
+
         <div cRow>
           <div class="mt-2">
             <input type="text" placeholder="Full Name" class="form-control" formControlName="fullName" (tap)="clickFileControl('profileImage')">
