--- a/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
+++ b/src/ui/internal-audit/src/app/views/private/dashboard/dashboard.component.html
@@ -110,7 +110,7 @@
               </c-row>
               <c-row>
 
-                <!-- <c-col md>
+                <c-col md>
                     <c-card class="mb-4" style="margin-left: 2%;">
                         <c-card-header class="Header_Title">
                             <c-icon name="cilShareBoxed"></c-icon> <strong><span> My Audit </span></strong>
@@ -131,15 +131,15 @@
                                     <th>Creation Date</th>
                                   </tr>
                                 </thead>
-                                <tbody *ngIf="countries?.length != 0">
-                                  <tr *ngFor="let country of countries">
-                                    <td>{{ country.code }}</td>
-                                    <td>{{ country.name }}</td>
-                                    <td>{{ country.createdOn | date:'mediumDate' }}</td>
+                                <tbody *ngIf="audits?.length != 0">
+                                  <tr *ngFor="let audit of audits">
+                                    <td>{{ audit.auditId }}</td>
+                                    <td>{{ audit.auditTypeName }}</td>
+                                    <td>{{ audit.createdOn | date:'medium' }}</td>
                                     
                                   </tr>
                                 </tbody>
-                                <tbody *ngIf="countries?.length == 0">
+                                <tbody *ngIf="audits?.length == 0">
                                   <tr>
                                     <td colspan="5" class="no-data-available">No data!</td>
                                   </tr>
@@ -149,10 +149,10 @@
                           </div>
                         </c-card-body>
                     </c-card>
-                </c-col> -->
+                </c-col>
 
 
-                <!-- <c-col md>
+                <c-col md>
                     <c-card class="mb-4"  style="margin-left: 1%; margin-right: 1%;">
                         <c-card-header class="Header_Title">
                             <c-icon name="cilSettings"></c-icon> <strong><span> Action To Be Taken </span></strong>
@@ -176,8 +176,8 @@
                                     </select>
                                 </c-col>
                             </c-row>
-                            <div class="row overflow-auto">
-                              <table datatable [dtOptions]="dtOptions[2]" class="table table-bordered row-border hover" >
+                           <div class="row overflow-auto mt-2">
+                              <table class="table table-bordered row-border hover" >
                                 <thead>
                                   <tr>
                                     <th>Issue ID</th>
@@ -186,20 +186,20 @@
                                     <th>Action Owner</th>
                                   </tr>
                                 </thead>
-                                <tbody *ngIf="countries?.length != 0">
-                                  <tr *ngFor="let country of countries">
-                                    <td>{{ country.code }}</td>
-                                    <td>{{ country.name }}</td>
-                                    <td>{{ country.code }}</td>
-                                    <td>{{ country.name }}</td>
-                                    
+                                <tbody>
+                                  <tr>
+                                    <td>IssueBAIN2022001</td>
+                                    <td>Branch Audit</td>
+                                    <td>MAPBAIN2022001</td>
+                                    <td>Omar Abdullah</td>
                                   </tr>
+                                 
                                 </tbody>
-                                <tbody *ngIf="countries?.length == 0">
+                                <!-- <tbody *ngIf="audits?.length == 0">
                                   <tr>
                                     <td colspan="5" class="no-data-available">No data!</td>
                                   </tr>
-                                </tbody>
+                                </tbody> -->
                               </table>
                 
                           </div>
@@ -233,7 +233,7 @@
                                 </c-col>
                             </c-row>
                             <div class="row overflow-auto">
-                              <table datatable [dtOptions]="dtOptions[3]" class="table table-bordered row-border hover" >
+                              <table datatable [dtOptions]="dtOptions[1]" class="table table-bordered row-border hover" >
                                 <thead>
                                   <tr>
                                     <th>Issue ID</th>
@@ -241,15 +241,15 @@
                                     <th>Issue Status</th>
                                   </tr>
                                 </thead>
-                                <tbody *ngIf="countries?.length != 0">
-                                  <tr *ngFor="let country of countries">
-                                    <td>{{ country.code }}</td>
-                                    <td>{{ country.name }}</td>
-                                    <td>{{ country.remarks }}</td>
+                                <tbody *ngIf="audits?.length != 0">
+                                  <tr *ngFor="let audit of audits">
+                                    <td>{{ audit.auditId }}</td>
+                                    <td>{{ audit.auditTypeName }}</td>
+                                    <td>OPEN</td>
                                     
                                   </tr>
                                 </tbody>
-                                <tbody *ngIf="countries?.length == 0">
+                                <tbody *ngIf="audits?.length == 0">
                                   <tr>
                                     <td colspan="5" class="no-data-available">No data!</td>
                                   </tr>
@@ -259,7 +259,7 @@
                           </div>
                         </c-card-body>
                     </c-card>
-                </c-col> -->
+                </c-col>
 
 
               </c-row>
