--- a/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/audit-frequency/audit-frequency.component.html
@@ -3,7 +3,9 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-header">
-            <div class="fa fa-align-justify" >Audit Frequency List</div> 
+            <div class="fa fa-align-justify" >
+              <strong>Audit Frequency List</strong>
+            </div> 
           </div>
           <div class="card-body">
             
@@ -44,8 +46,8 @@
                       <td>{{ auditFrequency.auditScore }}</td>
                       <td>{{ auditFrequency.ratingType }}</td>
                       <td>{{ auditFrequency.auditFrequencyType }}</td>
-                      <td>{{ auditFrequency.effectiveFrom | date:'medium' }}</td>
-                      <td>{{ auditFrequency.effectiveTo | date:'medium' }}</td>
+                      <td>{{ auditFrequency.effectiveFrom | date:'mediumDate' }}</td>
+                      <td>{{ auditFrequency.effectiveTo | date:'mediumDate' }}</td>
                       <td class="text-center">
                         <div class="btn-group" role="group" aria-label="Basic example">
                           <button type="button" class="btn btn-secondary btnEditColor" (click)="edit(verticallyCenteredModal,auditFrequency)">
