--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/staff-turnover/staff-turnover.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/staff-turnover/staff-turnover.component.html
@@ -63,23 +63,24 @@
                             <td>{{ riskAssessment.branchName }}</td>
                             <td>
                                 <div>
-                                    <input type="number" class="form-control" id="staffTurnover" placeholder="Staff TurnOver" (change)="GetProductivity($event, i)">
+                                    <input type="number" class="form-control" id="staffTurnover" placeholder="Staff TurnOver" (change)="GetProductivity($event, i)" value={{riskAssessment.amountConverted}}/>
                                 </div>
                             </td>
                             <td>
                                 <div form-floating>
-                                    <select aria-label="Floating label select example" (change)="GetRating($event, i)" cSelect id="Score" name="Score">
-                                        <option value=null title="null">Select</option>
+                                    <select [(ngModel)]='riskAssessment.text' aria-label="Floating label select example" (change)="GetRating($event, i)" cSelect id="Score" name="Score">
+                                        <option value=null>Select</option>
                                         <option *ngFor="let score of scores" [value]="score.text">
                                             {{score.value}}
                                         </option>
+                
                                     </select>
                                 </div>
                             </td>
                             <td> 
                                 <div form-floating>
                                     <select aria-label="Floating label select example" cSelect id="Rating" name="Rating">
-                                        <option value={{selectedRating[i]}}>{{selectedRating[i]}}</option>
+                                        <option *ngIf="riskAssessment.text != undefined" value={{riskAssessment.text}}>{{riskAssessment.text}}</option>
                                     </select>
                                 </div>
                             </td>
